--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,34 +1,6 @@
-$primary-color: #262626;
-$text-color: white;
-$secondary-color: rgb(75, 152, 146);
-$show-home-image: true;
-$home-image: url(../media/galaxy-infinity-milky-way-orbit-space-stars-1366710-pxhere.com.jpg);
-$background-opacity: 0.6;
+@import 'config';
+@import 'menu';
 
-
-@mixin easeOut {
-    transition: all 0.5s ease-out;
-}
-
-@mixin background {
-    @if $show-home-image {
-       &#bg-img{
-           background: $home-image;
-           background-attachment: fixed;
-           background-size: cover;
-           &:after {
-               content: '';
-               position: absolute;
-               top: 0;
-               right: 0;
-               width: 100%; 
-               height: 100%;
-               z-index: -1;
-               background: rgba($primary-color,$background-opacity);
-           }
-       }
-    }
-}
 
 * {
     box-sizing: border-box;
