--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -27,7 +27,7 @@
         .btn-line {
           // Line 1 - Rotate
           &:nth-child(1) {
-              background-color: $secondary-color;
+              background-color:  $secondary-color;
               transform: rotate(45deg) translate(13px, 13px);
           }
 
@@ -46,4 +46,115 @@
           // Line 3 - Rotate
         }
     }
+}
+
+// Menu Overlay 
+.menu{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
+    visibility: hidden;
+
+    &.show {
+        visibility: visible;
+    }
+
+    &-branding,
+    &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+        list-style: none;
+        @include easeOut;
+
+ 
+    }
+
+    &-nav {
+        margin: 0;
+        padding: 0;
+        background: darken($primary-color, 10);
+        opacity: 0.4;
+        transform: translate3d(0, -100%, 0);
+        @include easeOut;
+        &.show {
+            // Slide in from top
+            transform: translate3d(0,0,0);
+        }
+        
+        .nav-item {
+            transform: translate3d(600px, 0, 0);
+            @include easeOut;
+            &.show {
+                // Slide in from top
+                transform: translate3d(0,0,0);
+            }
+
+            &.current > a {
+                color: $secondary-color;
+            }
+        }
+
+        .nav-link {
+          display: inline-block;
+          position: relative;
+          font-size: 30px;
+          text-transform: uppercase; 
+          padding: 1rem 0;
+          font-weight: 300;
+          color: #fff;
+          z-index: 10;
+          text-decoration: none;
+          margin-top: 4px;
+          padding-bottom: 0.4rem;
+          @include easeOut;
+          &:hover {
+              color: $secondary-color;
+              border-bottom: 10px $secondary-color solid;
+          }
+
+        }
+    }
+
+    &-branding {
+        background: $secondary-color;
+        transform: translate3d(0, 100%, 0);
+        @include easeOut;
+        opacity: 0.9;
+
+        &.show {
+            // Slide in from bottom
+            transform: translate3d(0,0,0);
+           
+        }
+
+        .portrait{
+            width: 250px;
+            height: 250px;
+            background: url('../media/174-1747230_eiffel-tower-png-eiffel-tower-png-icon-clipart.png');
+            border-radius: 50%;
+            
+            opacity: 0.4;
+            @include easeOut;
+
+            &:hover {
+                opacity: 1;
+                box-shadow: 2px 2px 50px 23px rgba(#fff,0.4);
+            }            
+        }
+    }
+}
+
+// Delay each nav item slide by 0.1s
+
+@for $x from 1 through 4 {
+   .nav-item:nth-child(#{$x}) {
+     transition-delay: $x * 0.2s;
+   };
 }
