--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,9 +28,18 @@ h3 {
     }
 
     &.sm-heading {
-        margin-bottom: 2rem;
+        margin-bottom: 0.2rem;
         padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color,4), 0.2);
+        background: rgba(lighten($primary-color,4), 0.6);
+        width: 40vw;
+    }
+
+    &.sm-sub-heading {
+        margin-bottom: 1rem;
+        padding: 0.4rem 1rem;
+        text-align: justify;
+        background: rgba(lighten($primary-color,4), 0.6);
+        width: 40vw;
     }
 }
 
@@ -69,7 +78,7 @@ main {
     &#home{
         overflow: hidden;
         h1{
-            margin-top: 20vh;
+            margin-top: 10vh;
         }
     }
 }
