--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,6 +6,8 @@ $home-image: url(../media/galaxy-infinity-milky-way-orbit-space-stars-1366710-px
 $background-opacity: 0.2;
 
 
+
+
 @mixin easeOut {
     transition: all 0.5s ease-out;
 }
@@ -29,3 +31,30 @@ $background-opacity: 0.2;
        }
     }
 }
+
+// Media Query Mixin
+
+@mixin mediaSm {
+  @media screen  and (max-width: 500px){
+      @content;
+  }
+}
+
+
+@mixin mediaMd {
+    @media screen  and (max-width: 758px){
+        @content;
+    }
+  }
+
+  @mixin mediaLg {
+    @media screen  and (min-width: 760px) and (max-width: 500px){
+        @content;
+    }
+  }
+
+  @mixin mediaXL {
+    @media screen  and (min-width: 1171px){
+        @content;
+    }
+  }
