--- a/scss/main.css
+++ b/scss/main.css
@@ -80,7 +80,7 @@
   margin: 0;
   padding: 0;
   background: #000206;
-  opacity: 0.4;
+  opacity: 0.9;
   -webkit-transform: translate3d(0, -100%, 0);
           transform: translate3d(0, -100%, 0);
   -webkit-transition: all 0.5s ease-out;
@@ -114,9 +114,8 @@
   font-size: 30px;
   text-transform: uppercase;
   padding: 1rem 0;
-  font-weight: 300;
+  font-weight: 500;
   color: #fff;
-  z-index: 10;
   text-decoration: none;
   margin-top: 4px;
   padding-bottom: 0.4rem;
@@ -126,7 +125,6 @@
 
 .menu-nav .nav-link:hover {
   color: #4b9892;
-  border-bottom: 10px #4b9892 solid;
 }
 
 .menu-branding {
@@ -179,6 +177,83 @@
           transition-delay: 0.8s;
 }
 
+@media screen and (max-width: 758px) {
+  main {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  main h1,
+  main h2,
+  main h3 {
+    margin: 0;
+    font-weight: 200;
+  }
+  main h1.lg-heading,
+  main h2.lg-heading,
+  main h3.lg-heading {
+    font-size: 3rem;
+    margin-right: 5vw;
+  }
+  main h1.sm-heading,
+  main h2.sm-heading,
+  main h3.sm-heading {
+    margin-bottom: 0.2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(5, 30, 72, 0.6);
+    width: 80vw;
+    margin-right: 5vw;
+  }
+  main h1.sm-sub-heading,
+  main h2.sm-sub-heading,
+  main h3.sm-sub-heading {
+    margin-bottom: 1rem;
+    padding: 0.4rem 1rem;
+    text-align: justify;
+    background: rgba(5, 30, 72, 0.6);
+    width: 80vw;
+  }
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+  }
+  ul.menu-nav.show,
+  div.menu-branding.show {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  .menu-nav {
+    height: 75vh;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+    font-size: 24px;
+  }
+  .menu-branding {
+    height: 25vh;
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  .menu-branding .portrait {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  main {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -191,6 +266,8 @@ body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body#bg-img {
